fix(bcd): align support cells vertically

--- a/client/src/document/ingredients/browser-compatibility-table/index.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index.scss
@@ -53,6 +53,8 @@
     }
 
     .bc-support {
+      vertical-align: top;
+
       button {
         cursor: pointer;
         width: 100%;
